--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,5 +1,8 @@
 name: Latest blog post workflow
 on:
+  push:
+    branches:
+      - main
   schedule:
     # Runs every hour
     - cron: '0 * * * *'
